--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Keegan Burkett <keegan.2.burkett@gmail.com>",
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "gatsby": "^2.30.1",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-google-analytics": "^2.3.13",
@@ -23,6 +24,7 @@
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-scrollspy": "^3.4.3",
+    "reactstrap": "^8.9.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
