--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-scrollspy": "^3.4.3",
+    "react-slick": "^0.28.1",
     "reactstrap": "^8.9.0",
     "styled-components": "^5.1.1"
   },
