--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Keegan Burkett <keegan.2.burkett@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/icons": "^4.11.2",
     "bootstrap": "^5.0.2",
     "gatsby": "^2.30.1",
     "gatsby-background-image": "^1.5.3",
