--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-starter-saas-marketing",
+  "name": "Halopesa website",
   "private": true,
-  "description": "A simple one page marketing starter for saas companies",
+  "description": "Welcome and Enjoy the digital payments transformation with HaloPesa.",
   "version": "0.1.0",
-  "author": "Keegan Burkett <keegan.2.burkett@gmail.com>",
+  "author": "datlt31@viettel.com.vn",
   "dependencies": {
-    "@material-ui/core": "^4.12.2",
+    "@material-ui/core": "4.12.2",
     "@material-ui/icons": "^4.11.2",
     "bootstrap": "^5.0.2",
     "gatsby": "^2.30.1",
