--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Halopesa website",
+  "name": "halopesa_website",
   "private": true,
   "description": "Welcome and Enjoy the digital payments transformation with HaloPesa.",
   "version": "0.1.0",
