--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@material-ui/core": "4.12.2",
     "@material-ui/icons": "^4.11.2",
     "bootstrap": "^5.0.2",
+    "fs-extra": "^8.1.0",
     "gatsby": "^2.30.1",
     "gatsby-background-image": "^1.5.3",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-google-analytics": "^2.3.13",
+    "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.23",
     "gatsby-plugin-offline": "^3.2.23",
     "gatsby-plugin-react-helmet": "^3.3.10",
@@ -21,6 +23,8 @@
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-remark": "^2.6.27",
     "gatsby-transformer-sharp": "^2.5.13",
+    "graceful-fs": "^4.2.6",
+    "i18next": "^20.3.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -28,6 +32,7 @@
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.11.3",
     "react-scrollspy": "^3.4.3",
     "react-slick": "^0.28.1",
     "reactstrap": "^8.9.0",
