--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "datlt31@viettel.com.vn",
   "dependencies": {
+    "@fontsource/open-sans": "^4.5.0",
+    "@fontsource/roboto": "^4.5.0",
     "@material-ui/core": "4.12.2",
     "@material-ui/icons": "^4.11.2",
     "bootstrap": "^5.0.2",
@@ -36,6 +38,7 @@
     "react-scrollspy": "^3.4.3",
     "react-slick": "^0.28.1",
     "reactstrap": "^8.9.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
