--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "@fontsource/roboto": "^4.5.0",
     "@material-ui/core": "4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "bootstrap": "^5.0.2",
-    "fs-extra": "^8.1.0",
     "gatsby": "^2.30.1",
     "gatsby-background-image": "^1.5.3",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.23",
+    "gatsby-plugin-mdx": "^2.10.1",
     "gatsby-plugin-offline": "^3.2.23",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.27",
@@ -25,7 +27,6 @@
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-transformer-remark": "^2.6.27",
     "gatsby-transformer-sharp": "^2.5.13",
-    "graceful-fs": "^4.2.6",
     "i18next": "^20.3.4",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
