--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.11.3",
+    "react-pdf": "^5.3.2",
     "react-scrollspy": "^3.4.3",
     "react-slick": "^0.28.1",
     "reactstrap": "^8.9.0",
