--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "datlt31@viettel.com.vn",
   "dependencies": {
+    "imagemin-pngquant": "^9.0.1",
     "@fontsource/open-sans": "^4.5.0",
     "@fontsource/roboto": "^4.5.0",
     "@material-ui/core": "4.12.2",
